Add GPT player account administration
